updating datasets and customization notebooks

--- a/labs/3-customization/31-basic-finetuning.ipynb
+++ b/labs/3-customization/31-basic-finetuning.ipynb
@@ -262,8 +262,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training file ID: file-68845d9da06f4ff8bfccfdf787ee2c7e\n",
-      "Validation file ID: file-e5ac2bf890ae4741970222a616e6c088\n"
+      "Training file ID: file-6a5b85c3c79441aa94290f63a389e48d\n",
+      "Validation file ID: file-f827f2fff84c498fbb12940dc1e9ff33\n"
      ]
     }
    ],
@@ -304,11 +304,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job ID: ftjob-749fe8acedac4835b95639ae176fa47b\n",
-      "Status: ftjob-749fe8acedac4835b95639ae176fa47b\n",
+      "Job ID: ftjob-bcf37c4d7a8947c8b281a2b3e6a1ed73\n",
+      "Status: ftjob-bcf37c4d7a8947c8b281a2b3e6a1ed73\n",
       "{\n",
-      "  \"id\": \"ftjob-749fe8acedac4835b95639ae176fa47b\",\n",
-      "  \"created_at\": 1762286463,\n",
+      "  \"id\": \"ftjob-bcf37c4d7a8947c8b281a2b3e6a1ed73\",\n",
+      "  \"created_at\": 1762422994,\n",
       "  \"error\": null,\n",
       "  \"fine_tuned_model\": null,\n",
       "  \"finished_at\": null,\n",
@@ -324,9 +324,9 @@
       "  \"seed\": 105,\n",
       "  \"status\": \"pending\",\n",
       "  \"trained_tokens\": null,\n",
-      "  \"training_file\": \"file-68845d9da06f4ff8bfccfdf787ee2c7e\",\n",
-      "  \"validation_file\": \"file-e5ac2bf890ae4741970222a616e6c088\",\n",
-      "  \"estimated_finish\": 1762287365,\n",
+      "  \"training_file\": \"file-6a5b85c3c79441aa94290f63a389e48d\",\n",
+      "  \"validation_file\": \"file-f827f2fff84c498fbb12940dc1e9ff33\",\n",
+      "  \"estimated_finish\": 1762423895,\n",
       "  \"integrations\": null,\n",
       "  \"metadata\": null,\n",
       "  \"method\": null\n",
@@ -338,6 +338,7 @@
     "# Submit fine-tuning training job\n",
     "# Add a delay so the cell runs for about 1 minute\n",
     "import time\n",
+    "time.sleep(60)\n",
     "\n",
     "# Note that the model you specify here must be one that can be fine-tuned.\n",
     "# Currently gpt-4o can be fine-tuned only in Sweden Central and North Central US\n",
@@ -349,7 +350,7 @@
     "    seed = 105,  # seed parameter controls reproducibility of the fine-tuning job. If no seed is specified one will be generated automatically.\n",
     ")\n",
     "\n",
-    "time.sleep(60)\n",
+    "\n",
     "\n",
     "job_id = response.id\n",
     "\n",
@@ -381,9 +382,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fine-tuning job ftjob-153a8a4806f84480acba096c9cfd24f4 finished with status: succeeded\n",
-      "Checking other fine-tune jobs for this resource.\n",
-      "Found 1 fine-tune jobs.\n"
+      "{\n",
+      "  \"id\": \"ftjob-bcf37c4d7a8947c8b281a2b3e6a1ed73\",\n",
+      "  \"created_at\": 1762422994,\n",
+      "  \"error\": null,\n",
+      "  \"fine_tuned_model\": null,\n",
+      "  \"finished_at\": null,\n",
+      "  \"hyperparameters\": {\n",
+      "    \"batch_size\": -1,\n",
+      "    \"learning_rate_multiplier\": 1.0,\n",
+      "    \"n_epochs\": -1\n",
+      "  },\n",
+      "  \"model\": \"gpt-4o-2024-08-06\",\n",
+      "  \"object\": \"fine_tuning.job\",\n",
+      "  \"organization_id\": null,\n",
+      "  \"result_files\": null,\n",
+      "  \"seed\": 105,\n",
+      "  \"status\": \"running\",\n",
+      "  \"trained_tokens\": null,\n",
+      "  \"training_file\": \"file-6a5b85c3c79441aa94290f63a389e48d\",\n",
+      "  \"validation_file\": \"file-f827f2fff84c498fbb12940dc1e9ff33\",\n",
+      "  \"estimated_finish\": 1762423895,\n",
+      "  \"integrations\": null,\n",
+      "  \"metadata\": null,\n",
+      "  \"method\": null\n",
+      "}\n",
+      "Elapsed time: 18 minutes 20 seconds\n",
+      "Status: running\n"
      ]
     }
    ],
@@ -814,7 +839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
