fix 3 / updated agents notebooks & validated runs

--- a/labs/1-agents/12-agent-framework-orchstration.ipynb
+++ b/labs/1-agents/12-agent-framework-orchstration.ipynb
@@ -149,9 +149,14 @@
     "credential = AzureCliCredential()\n",
     "\n",
     "# Verify it works by getting a token\n",
-    "token = await credential.get_token(\"https://cognitiveservices.azure.com/.default\")\n",
-    "\n",
-    "print(\"✅ Azure CLI credentials created successfully!\")"
+    "try:\n",
+    "    token = await credential.get_token(\"https://cognitiveservices.azure.com/.default\")\n",
+    "    print(\"✅ Azure CLI credentials created successfully!\")\n",
+    "    print(f\"✅ Token retrieved - credential is working!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Failed to get token: {e}\")\n",
+    "    print(\"💡 Make sure you've run 'az login' in the terminal first!\")\n",
+    "    raise"
    ]
   },
   {
@@ -406,7 +411,10 @@
     "print(f\"User: {question}\\n\")\n",
     "\n",
     "# Create ChatAgent wrapper for the product inventory agent\n",
-    "chat_client = AzureAIAgentClient(project_client=project_client, agent_id=product_inventory_agent.id)\n",
+    "chat_client = AzureAIAgentClient(\n",
+    "    agents_client=project_client.agents,\n",
+    "    agent_id=product_inventory_agent.id\n",
+    ")\n",
     "\n",
     "try:\n",
     "    async with ChatAgent(chat_client=chat_client) as agent:\n",
@@ -465,7 +473,10 @@
     "print(f\"User: {question}\")\n",
     "\n",
     "# Create ChatAgent wrapper for the customer service agent\n",
-    "chat_client = AzureAIAgentClient(project_client=project_client, agent_id=customer_service_agent.id)\n",
+    "chat_client = AzureAIAgentClient(\n",
+    "    agents_client=project_client.agents,\n",
+    "    agent_id=customer_service_agent.id\n",
+    ")\n",
     "\n",
     "try:\n",
     "    async with ChatAgent(chat_client=chat_client) as agent:\n",
@@ -592,7 +603,10 @@
     "        agent_name = \"Customer Service Agent\"\n",
     "    \n",
     "    # Create ChatAgent wrapper and get response\n",
-    "    chat_client = AzureAIAgentClient(project_client=project_client, agent_id=agent.id)\n",
+    "    chat_client = AzureAIAgentClient(\n",
+    "        agents_client=project_client.agents,\n",
+    "        agent_id=agent.id\n",
+    "    )\n",
     "    \n",
     "    try:\n",
     "        async with ChatAgent(chat_client=chat_client) as chat_agent:\n",
